# django-micro-search

./: .env.example  .gitignore  .ruff.toml  compose.yml  makefile  pyproject.toml
app/app/: api.py  models.py  settings.py  urls.py
app/documents/: api.py  models.py  services.py
app/documents/migrations/: 0001_initial.py  0002_create_pg_vector.py  0003_document_text_embedding.py
app/images/: api.py  models.py  services.py
app/images/migrations/: 0001_initial.py
app/images/ml_models/: clip.py
frontend/: index.html  package-lock.json  package.json  seed-movies.cjs
frontend/src/: index.css  main.tsx  routes.tsx
frontend/src/api/: client.ts
frontend/src/components/: DocumentForm.tsx  DocumentSearch.tsx  ImageForm.tsx  ImageSearchForm.tsx
frontend/src/pages/: about.tsx  documents.tsx  home.tsx  images.tsx
