[tool.poetry]
name = "dj-hybrid"
version = "0.1.0"
description = "Playground for hybrid search using Django"
authors = ["Matheus Deister <matheus.deister@vinta.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
